resources/demo-apps/external-load-balanced-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aks-helloworld-lb-ext
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: aks-helloworld
