resources/demo-apps/internal-load-balanced-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aks-helloworld-lb-int
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: aks-helloworld
