resources/demo-apps/private-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-hello-world-ingress-private
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: "letsencrypt-cluster"
spec:
  ingressClassName: private-ingress
  tls:
    - hosts:
      - demo-apps-private.sandbox.launch.dresdencraft.com
      secretName: demo-apps-hello-world-ingress-private-tls
  rules:
  - host: demo-apps-private.sandbox.launch.dresdencraft.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: aks-helloworld
              port:
                number: 80
